force-app/main/default/objects/ssot__AuthLocationPermitSchedule__dlm/fields/ssot__AuthApplicationPlaceId__c.field-meta.xml
<CustomField>
    <fullName>ssot__AuthApplicationPlaceId__c</fullName>
    <label>Authorization Application Place</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>AuthApplicationPlaceId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>