force-app/main/default/objects/ssot__AuthLocationPermitSchedule__dlm/fields/ssot__AuthEndDate__c.field-meta.xml
<CustomField>
    <fullName>ssot__AuthEndDate__c</fullName>
    <label>Authorization End Date</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>AuthEndDate</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Date</type>
</CustomField>