force-app/main/default/objects/ssot__AuthLocationPermitSchedule__dlm/fields/ssot__AuthLocationPermitWorkDay__c.field-meta.xml
<CustomField>
    <fullName>ssot__AuthLocationPermitWorkDay__c</fullName>
    <label>Auth Location Permit Work Day</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>AuthLocationPermitWorkDay</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>