force-app/main/default/objects/ssot__AuthLocationPermitSchedule__dlm/fields/ssot__WorkStartTime__c.field-meta.xml
<CustomField>
    <fullName>ssot__WorkStartTime__c</fullName>
    <label>Work Start Time</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>WorkStartTime</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>DateTime</type>
</CustomField>